--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "build": {
+    "env": {
+      "MOMENT_TZ": "moment-timezone"
+    }
 }
